Fix background for mobile collapse button now that sidebar is primary-colored

--- a/frontend/src/components/sidebar/sidebar.scss
+++ b/frontend/src/components/sidebar/sidebar.scss
@@ -30,7 +30,7 @@
   height: 100%;
 
   .mobile-collapse-button {
-    background-color: var(--md-sys-color-surface-variant);
+    background-color: var(--md-sys-color-primary-container-lowest);
 
     cursor: pointer;
     display: none;
